fix misaligned reset sync radio button labels
Keeping the spacing between the radio buttons and
the description text below.

Fixes: #5580

--- a/scss/preferences/_sync_reset.scss
+++ b/scss/preferences/_sync_reset.scss
@@ -46,7 +46,10 @@
 #sync-reset-radiogroup > div radio .radio-label {
 	font-weight: 600;
 	font-size: 15px;
-	margin-bottom: .2em;
+}
+
+#sync-reset-radiogroup radio {
+	margin-block: 6px;
 }
 
 #sync-reset-radiogroup > div .sync-reset-option-desc {
